Fix tab issue on modal and set overflow to auto

--- a/src/components/PlotPopup/styles.css
+++ b/src/components/PlotPopup/styles.css
@@ -4,5 +4,5 @@
 
 .popup-content {
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
