--- a/src/components/Sidebar/styles.css
+++ b/src/components/Sidebar/styles.css
@@ -26,7 +26,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .panel-header-action {
